welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:13: error: not found: value reucle
  reucle();
  ^FlowerPot:41: error: not found: value growFlowers
growFlowers(); 
^